# spacy-wrap

./: .buildinfo  .flake8  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  citation.cff  creating_a_component.py  faq.html  genindex.html  index.html  installation.html  news.html  objects.inv  py-modindex.html  pyproject.toml  readme.md  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  wrap.architectures.html  wrap.layers.html  wrap.pipeline_component.html
.doctrees/: environment.pickle  faq.doctree  index.doctree  installation.doctree  news.doctree  wrap.architectures.doctree  wrap.layers.doctree  wrap.pipeline_component.doctree
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: 01_bugs.md  config.yml
.github/workflows/: dependabot_automerge.yml  documentation.yml  pre-commit.yml  publish_to_pypi.yml  pytest-cov-comment.yml  tests.yml
_modules/: index.html
_modules/spacy_wrap/: architectures.html  pipeline_component.html  pipeline_component_seq_clf.html  pipeline_component_tok_clf.html
_modules/spacy_wrap/layers/: clf_transformer_model.html
_sources/: faq.rst.txt  index.rst.txt  installation.rst.txt  news.rst.txt  wrap.architectures.rst.txt  wrap.layers.rst.txt  wrap.pipeline_component.rst.txt
_static/: documentation_options.js
dev/pytest-coverage/: .coveragerc  run_coverage.py
docs/: conf.py  faq.rst  index.rst  installation.rst  news.rst  requirements.txt  wrap.architectures.rst  wrap.layers.rst  wrap.pipeline_component.rst
spacy_wrap/: __init__.py  about.py  architectures.py  pipeline_component.py  pipeline_component_new.py  pipeline_component_seq_clf.py  pipeline_component_tok_clf.py  pipeline_seq_clf_component.py  pipeline_tok_clf_component.py  util.py
spacy_wrap/layers/: clf_transformer_model.py  clf_transformer_model_new.py  hf_classification_wrapper.py  hf_shim.py
spacy_wrap/tests/: test_clf_transformer.py
src/spacy_wrap/: __init__.py  about.py  architectures.py  pipeline_component_seq_clf.py  pipeline_component_tok_clf.py  util.py
src/spacy_wrap/layers/: clf_transformer_model.py
tests/: test_seq_clf_transformer.py  test_tok_clf_transformer.py
